Make authentication and TLS optional

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -49,3 +49,8 @@ msmtp_remove_mtas: no
 msmtprc_owner: root
 msmtprc_group: root
 msmtprc_mode: 0644
+
+## TLS settings
+msmtp_default_auth: "on"
+msmtp_default_tls: "on"
+msmtp_default_tls_starttls: "on"
